--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
 Django==1.5.1
+
 # an intelligent database migrations library for the Django web framework
 South==0.7.5
+
+# a PostgreSQL database adapter for the Python programming language
+psycopg2==2.4.6
